--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "porfolio",
+  "name": "project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "lqip-modern": "^2.2.1",
+    "sharp": "0.33.5",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
     "react": "^19.0.0",
@@ -25,5 +27,8 @@
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "sharp": "0.33.5"
   }
 }
